# scrabble

./: .gitignore  LICENSE  README.md  scrabble.cabal
doc/: SCRABBLE_RFC_v1.txt  SCRABBLE_RFC_v1_0_1.txt
lib/: Board.hs  GameState.hs  MonadScrabble.hs  Player.hs  Position.hs  Score.hs  Scrabble.hs  ScrabbleT.hs  TilePlacement.hs  Word.hs
lib/Scrabble/: Board.hs  Exception.hs  GameState.hs  Modifier.hs  Player.hs  Position.hs  Score.hs  Tile.hs  TilePlacement.hs  Word.hs
src/: App.hs  Board.hs  Draw.hs  GameState.hs  Main.hs  Modifier.hs  Player.hs  Position.hs  Scrabble.hs  ScrabbleT.hs  Tile.hs  TilePlacement.hs  Word.hs
src/App/: AppState.hs  Attributes.hs  Draw.hs  Event.hs  Name.hs
test/: BugSpec.hs
test/Scrabble/: ScoreSpec.hs
