cabal-version: 2.2

name:           scrabble
version:        0.1.0.0
description:    An implementation of a networked scrabble protocol
author:         Killian Coddington
copyright:      2019 Killian Coddington
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/coddinkn/scrabble

common shared-properties
  default-language: Haskell2010
  default-extensions: GeneralizedNewtypeDeriving 
  build-depends:
      base >=4.7 && <5
    , containers
    , mtl

library
  import: shared-properties
  exposed-modules: Scrabble
  other-modules: Paths_scrabble
               , Board
               , Player
               , Position
               , Modifier
               , Score
               , Tile
               , TilePlacement
               , GameState
               , ScrabbleT
               , Word
  hs-source-dirs:
      lib

executable scrabble
  import: shared-properties
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      scrabble

test-suite spec
  import: shared-properties
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test, lib
  build-depends:
    hspec == 2.*,
    QuickCheck == 2.*,
  build-tool-depends: hspec-discover:hspec-discover == 2.*
  other-modules:
    Score,
    ScoreSpec
