cabal-version: 2.2

name:           scrabble
version:        0.1.0.0
description:    An implementation of a networked scrabble protocol
author:         Killian Coddington
copyright:      2019 Killian Coddington
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/coddinkn/scrabble

common shared-properties
  default-language: Haskell2010
  default-extensions:
      GeneralizedNewtypeDeriving
    , TemplateHaskell
    , TupleSections
  build-depends:
      base >=4.7 && <5
    , containers
    , vector
    , mtl
    , random
    , MonadRandom
    , cursor
    , microlens
    , microlens-th

library
  import: shared-properties
  exposed-modules: Scrabble
                 , Scrabble.Board
                 , Scrabble.Player
                 , Scrabble.Position
                 , Scrabble.Tile
                 , Scrabble.TilePlacement
                 , Scrabble.GameState
                 , Scrabble.Exception
  other-modules: Paths_scrabble
               , ScrabbleT
               , MonadScrabble
               , Scrabble.Modifier
               , Scrabble.Score
               , Scrabble.Word
  hs-source-dirs:
      lib

executable scrabble
  import: shared-properties
  main-is: Main.hs
  other-modules: App
               , App.Attributes
               , App.Name
               , App.AppState
               , App.Event
               , App.Draw
  hs-source-dirs: src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      scrabble
    , brick
    , vty

test-suite spec
  import: shared-properties
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test, lib
  build-depends:
    hspec == 2.*,
    QuickCheck == 2.*,
  build-tool-depends: hspec-discover:hspec-discover == 2.*
  other-modules:
    Score,
    ScoreSpec
